# pdf2pdfa

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
frontend/: index.html
pdf2pdfa/: __init__.py  cli.py  colorspace.py  converter.py  font_resolver.py  fonts.py  icc.py
pdf2pdfa/data/: CMYK.icc.b64
tests/: conftest.py  test_colorspace.py  test_converter_basic.py  test_docinfo_sync.py  test_font_resolver.py  test_fonts_embedding.py  test_icc.py  test_pdfa_levels.py
tests/data/: sample.pdf.b64
